--- a/RazorPage/RazorPage/Pages/DetailCompany.cshtml
+++ b/RazorPage/RazorPage/Pages/DetailCompany.cshtml
@@ -16,8 +16,8 @@
                    <p class="card-text mb-4">Score: <strong>@Model.Company.Score</strong></p>
                    <p class="card-text mb-4">Tags: <strong>@Model.Company.Tags</strong></p>
 
-                   <a asp-page="/ListShopsPage" class="btn btn-outline-secondary">
-                       ← Back to list
+                   <a asp-page="/MapPage" class="btn btn-outline-secondary">
+                       ← Back to map
                    </a>
                </div>
             </div>
