--- a/RazorPage/RazorPage/Pages/Shared/_Layout.cshtml
+++ b/RazorPage/RazorPage/Pages/Shared/_Layout.cshtml
@@ -26,10 +26,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/MapPage">Maps</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/ListShopsPage">ListShops</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ListShopsPage">List Shops</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Contact">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CalculateEnergy">Calculate Energy</a>
                         </li>
                     </ul>
                 </div>
