Razor Pages Finish.

--- a/RazorPage/RazorPage/Pages/Contact.cshtml
+++ b/RazorPage/RazorPage/Pages/Contact.cshtml
@@ -85,7 +85,7 @@
         </div>
         <div>
             <h2>Email</h2>
-            <p>contact@company.com</p>
+            <p>eudad.fajula.7e6@itb.cat</p>
         </div>
     </div>
 
