--- a/RazorPage/RazorPage/Pages/Shared/_Layout.cshtml
+++ b/RazorPage/RazorPage/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CalculateEnergy">Calculate Energy</a>
                         </li>
-                        @if (loggedUser != null)
+                        
+                        <!--@if (loggedUser != null)
                         {
 							<li class="nav-item">
                                 <span>Welcome, @loggedUser.Email!</span>
@@ -54,7 +55,8 @@
 							<li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Register">Register</a>
 							</li>
-                        }
+                        }-->
+                        
                     </ul>
                 </div>
             </div>
