--- a/RazorPage/RazorPage/Pages/MapPage.cshtml
+++ b/RazorPage/RazorPage/Pages/MapPage.cshtml
@@ -113,6 +113,7 @@
                     </div>
                 </div>
             </div>
+            <div style="height : 50px"/>
         </div>
     </main>
 
